src/main/java/application/testData/invalidRandomAddresses/medium/todo/RandomAddressesWithIndicatives.java
package application.testData.invalidRandomAddresses.medium.todo;

public class RandomAddressesWithIndicatives {
}
